feat: highlight Egor Bulygin portrait in hero

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>София Демидова — AI-маркетинг стратег</title>
+  <title>Егор Булыгин — AI-маркетинг стратег</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -21,7 +21,7 @@
 
   <header class="site-header">
     <div class="container site-header__inner">
-      <a class="brand" href="#top">Sofia Demidova</a>
+      <a class="brand" href="#top">Егор Булыгин</a>
       <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">
         <span>Меню</span>
       </button>
@@ -38,6 +38,14 @@
   <main>
     <section class="hero">
       <div class="container hero__inner">
+        <figure class="hero__portrait">
+          <div class="hero__portrait-glow" aria-hidden="true"></div>
+          <img class="hero__portrait-image" src="public/img/hero-portrait.jpg" alt="Портрет Егора Булыгина" loading="lazy">
+          <figcaption>
+            <span>Егор Булыгин</span>
+            AI-маркетинг стратег &amp; продюсер роста
+          </figcaption>
+        </figure>
         <div class="hero__content">
           <span class="hero__eyebrow">AI marketing lab</span>
           <h1>Создаю маркетинг, где алгоритмы и идеи работают на рост</h1>
@@ -62,16 +70,6 @@
             </li>
           </ul>
         </div>
-        <figure class="hero__portrait">
-          <div class="portrait-card">
-            <div class="portrait-card__glow"></div>
-            <img src="public/img/hero-portrait.jpg" alt="Портрет Софии Демидовой" loading="lazy">
-            <figcaption>
-              <span>София Демидова</span>
-              AI-маркетинг стратег &amp; продюсер роста
-            </figcaption>
-          </div>
-        </figure>
       </div>
     </section>
 
@@ -204,7 +202,7 @@
 
   <footer class="site-footer">
     <div class="container site-footer__inner">
-      <p>© 2024 София Демидова. Deep marketing systems &amp; AI strategy.</p>
+      <p>© 2024 Егор Булыгин. Deep marketing systems &amp; AI strategy.</p>
       <div class="site-footer__links">
         <a href="https://t.me/deepmarketing" target="_blank" rel="noreferrer">Telegram</a>
         <a href="mailto:hello@deepmarketing.studio">Email</a>
