--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
   <header class="site-header">
     <div class="container site-header__inner">
-      <a class="brand" href="#top">Егор Булыгин</a>
+      <a class="brand" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Егор Булыгин</a>
       <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">
         <span>Меню</span>
       </button>
       <nav id="site-nav" class="site-nav" aria-label="Главное меню">
-        <a href="#focus">Фокус</a>
-        <a href="#systems">Системы</a>
-        <a href="#signals">Сигналы</a>
-        <a href="#contact">Контакты</a>
+        <a href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Почему подписаться</a>
+        <a href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Что внутри</a>
+        <a href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Кейсы</a>
+        <a href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Перейти в канал</a>
       </nav>
-      <a class="header-cta" href="https://t.me/deepmarketing" target="_blank" rel="noreferrer">Связаться</a>
+      <a class="header-cta" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Открыть канал</a>
     </div>
   </header>
 
@@ -48,12 +48,12 @@
         </figure>
         <div class="hero__content">
           <span class="hero__eyebrow">AI marketing lab</span>
-          <h1>Создаю маркетинг, где алгоритмы и идеи работают на рост</h1>
-          <p>Помогаю брендам превращать данные в эмоции: собираю стратегию, строю продуктовые воронки и подключаю
-            искусственный интеллект там, где он усиливает креатив, а не мешает команде.</p>
+          <h1>Подключайся к каналу и собирай воронку, где AI и креатив дают рост</h1>
+          <p>Я еженедельно публикую сценарии, промпты и чек-листы, которые мы тестируем с командами. Подписывайся,
+            чтобы забирать готовые шаги и внедрять их без десятков консультаций.</p>
           <div class="hero__actions">
-            <a class="btn btn--primary" href="mailto:hello@deepmarketing.studio">hello@deepmarketing.studio</a>
-            <a class="btn btn--ghost" href="https://t.me/deepmarketing" target="_blank" rel="noreferrer">Телеграм</a>
+            <a class="btn btn--primary" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Подписаться на канал</a>
+            <a class="btn btn--ghost" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Узнать детали</a>
           </div>
           <ul class="hero__metrics" role="list">
             <li>
@@ -76,25 +76,25 @@
     <section id="focus" class="section">
       <div class="container section__inner">
         <header class="section__header">
-          <h2>Фокус на том, что действительно усиливает продукт</h2>
-          <p>Собираю стек из аналитики, генеративного контента и автоматизации, чтобы команда успевала тестировать
-            гипотезы, а бренд звучал последовательно во всех каналах.</p>
+          <h2>Почему стоит подписаться</h2>
+          <p>Канал — быстрый вход в мои рабочие материалы. Вместо продажных постов ты получаешь инструкции, которые можно
+            сразу внедрить в продукт, команду и креатив.</p>
         </header>
         <div class="pillars">
           <article class="glass-card">
-            <h3>Стратегия принятия решений</h3>
-            <p>Связываю данные CRM, поведение пользователей и исследовательские инсайты в единую карту роста. Делаю
-              понятную логику, куда направлять бюджет и как измерять эффект.</p>
+            <h3>Быстрый разогрев</h3>
+            <p>Первым делом я даю понятную карту действий: как считать сигналы, куда направлять бюджет, какие эксперименты
+              ставить. Это убирает хаос и экономит время.</p>
           </article>
           <article class="glass-card">
-            <h3>AI-креатив &amp; контент-лаборатория</h3>
-            <p>Создаю визуальные и текстовые концепции на базе диффузионных и LLM-моделей. Настраиваю пайплайн, где
-              генерация, отбор и адаптация проходят за часы.</p>
+            <h3>Готовые нейро-сценарии</h3>
+            <p>Делюсь промпт-картами, шаблонами контента и пайплайнами генерации. Берёшь готовое, подставляешь свой
+              продукт и запускаешь.</p>
           </article>
           <article class="glass-card">
-            <h3>Маркетинговые системы</h3>
-            <p>Проектирую автоворонки, чат-ассистентов и персональные рекомендации. Выстраиваю метрики, A/B тесты и
-              синхронизирую их с бизнес-целями.</p>
+            <h3>Системы без воды</h3>
+            <p>Показываю реальные связки инструментов: от AI-ассистентов и автоворонок до персональных рекомендаций.
+              Видно, что работает и как это масштабировать.</p>
           </article>
         </div>
       </div>
@@ -103,17 +103,18 @@
     <section id="systems" class="section section--alt">
       <div class="container section__inner">
         <header class="section__header">
-          <h2>Системы, которые можно масштабировать</h2>
-          <p>Каждый модуль — отдельный стек инструментов. Собираю под вашу команду и обучаю на практике.</p>
+          <h2>Что ты получишь в канале</h2>
+          <p>Структурированные подборки: коротко о теории, пошаговые инструкции и примеры внедрения. Всё, чтобы ты сразу
+            тестировал и видел рост.</p>
         </header>
         <div class="systems">
           <article class="system">
             <div class="system__tag">01</div>
             <h3>Neuro Canvas</h3>
-            <p>Фреймворк для проектирования продукта и позиционирования с помощью AI-аналитики. Помогает видеть карту
-              возможностей и быстро запускать пилоты.</p>
+            <p>Фреймворк для позиционирования и продуктовой логики. Делюсь шаблонами, чтобы ты мог быстро собрать свою
+              карту возможностей.</p>
             <ul>
-              <li>Работа с обратной связью из сообщества и CRM</li>
+              <li>Шаблоны сбора сигналов из сообщества</li>
               <li>Нейро-аналитика аудитории</li>
               <li>Переупаковка ценностного предложения</li>
             </ul>
@@ -121,10 +122,10 @@
           <article class="system">
             <div class="system__tag">02</div>
             <h3>Signal Engine</h3>
-            <p>Система сигналов, которая объединяет мониторинг, исследования и генерацию контента. Видно, когда и где
-              включать кампании.</p>
+            <p>Система сигналов для запуска кампаний: мониторинг, исследования и генерация контента, собранные в одном
+              наборе инструкций.</p>
             <ul>
-              <li>AI-асистенты для сбора инсайтов</li>
+              <li>AI-ассистенты для сбора инсайтов</li>
               <li>Динамические контент-паттерны</li>
               <li>Мультканальные сценарии nurturing</li>
             </ul>
@@ -132,8 +133,8 @@
           <article class="system">
             <div class="system__tag">03</div>
             <h3>Growth Studio</h3>
-            <p>Командная среда для экспериментов. Настраиваем процессы, чтобы маркетинг, продукт и продажи работали на
-              одной доске и с единым стеком данных.</p>
+            <p>Формат для командных экспериментов: процессы, роль AI и чек-листы внедрения. Берёшь под ключ и повторяешь
+              у себя.</p>
             <ul>
               <li>Дашборды принятия решений</li>
               <li>Автоматизированные спринты</li>
@@ -147,8 +148,8 @@
     <section id="signals" class="section">
       <div class="container section__inner">
         <header class="section__header">
-          <h2>Сигналы и результаты</h2>
-          <p>Комбинирую экспериментальные метрики и понятные бизнес-результаты. Так легче защищать смелые решения.</p>
+          <h2>Кейсы и сигналы из канала</h2>
+          <p>Я показываю, как AI-стек влияет на продукт и продажи. Это реальные кейсы, которые можно повторить.</p>
         </header>
         <div class="signals">
           <article class="signal">
@@ -176,26 +177,16 @@
     <section id="contact" class="section section--alt contact">
       <div class="container contact__inner">
         <div class="contact__intro">
-          <h2>Давайте соберём вашу следующую систему роста</h2>
-          <p>Опишите задачу или пришлите ссылку на продукт. Вернусь с идеями и дорожной картой тестов.</p>
+          <h2>Забирай инструкции и кейсы в Telegram</h2>
+          <p>Подписывайся, чтобы получать свежие разборы, чек-листы и промпты. Без форм и ожидания ответа — вся полезная
+            информация уже в канале.</p>
           <div class="contact__links">
-            <a class="btn btn--primary" href="https://t.me/deepmarketing" target="_blank" rel="noreferrer">Написать в
-              Telegram</a>
-            <a class="btn btn--ghost" href="mailto:hello@deepmarketing.studio">Отправить письмо</a>
+            <a class="btn btn--primary" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Перейти в
+              канал</a>
+            <a class="btn btn--ghost" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Узнать
+              подробнее</a>
           </div>
         </div>
-        <form class="contact__form" name="contact" netlify>
-          <label for="company">Компания или продукт</label>
-          <input id="company" name="company" type="text" placeholder="Deep Marketing" required>
-          <label for="challenge">Главная задача</label>
-          <textarea id="challenge" name="challenge" rows="3"
-            placeholder="Хочу выстроить системный маркетинг с AI-ассистентами"></textarea>
-          <label for="timeline">Желаемый таймлайн</label>
-          <input id="timeline" name="timeline" type="text" placeholder="Старт в июле">
-          <button class="btn btn--primary" type="submit">Запросить созвон</button>
-          <p class="contact__note">Оставляя заявку, вы соглашаетесь с обработкой данных и получаете PDF с моим чек-листом
-            по AI-маркетингу.</p>
-        </form>
       </div>
     </section>
   </main>
@@ -204,9 +195,9 @@
     <div class="container site-footer__inner">
       <p>© 2024 Егор Булыгин. Deep marketing systems &amp; AI strategy.</p>
       <div class="site-footer__links">
-        <a href="https://t.me/deepmarketing" target="_blank" rel="noreferrer">Telegram</a>
-        <a href="mailto:hello@deepmarketing.studio">Email</a>
-        <a href="#top">Наверх</a>
+        <a href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Telegram</a>
+        <a href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Подписаться</a>
+        <a href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Узнать больше</a>
       </div>
     </div>
   </footer>
