Refocus landing content on neuro funnel pitch

--- a/index.html
+++ b/index.html
@@ -48,148 +48,43 @@
         </figure>
         <div class="hero__content">
           <span class="hero__eyebrow">AI marketing lab</span>
-          <h1>Подключайся к каналу и собирай воронку, где AI и креатив дают рост</h1>
-          <p>Я еженедельно публикую сценарии, промпты и чек-листы, которые мы тестируем с командами. Подписывайся,
-            чтобы забирать готовые шаги и внедрять их без десятков консультаций.</p>
+          <h1>С нейроворонкой вы знаете, что нужно людям</h1>
+          <div class="hero__story">
+            <p class="hero__lead">Успех продаж, особенно в холодную, зависит от двух вещей:</p>
+            <ul class="hero__list">
+              <li><strong>Предложить людям то, что они ищут,</strong> и чего нет у конкурентов.</li>
+              <li><strong>Описать это их словами</strong> и через их задачи.</li>
+            </ul>
+            <p>Но вы не знаете точно, чего хотят люди в конкретном канале трафика. Даже в вашей базе.</p>
+            <p>Узнать это можно только кастдевом. Что долго, дорого, а для каждого рекламного канала и продукта – просто нерентабельно. Но...</p>
+
+            <p class="hero__subhead">С нейроворонкой вы:</p>
+            <ul class="hero__list hero__list--spaced">
+              <li>Точно видите, что за аудитория в каждом канале и закупаете только 100% целевой трафик.</li>
+              <li>Дословно знаете, чего хотят конкретно эти люди и создаете для них киллер-оффер с тем, чего нет у конкурентов (+ исследование рынка).</li>
+              <li>Объясняете каждому человеку ценность продукта через его личные задачи и препятствия, кратно увеличивая конверсию в продажи.</li>
+            </ul>
+
+            <p class="hero__subhead">Как это выглядит и что происходит внутри?</p>
+            <p>Нейроворонка – это ИИ-бот с диалоговым лид-магнитом, который:</p>
+            <ul class="hero__list hero__list--spaced">
+              <li>Даёт персональную пользу и вау-эффект подписчикам.</li>
+              <li>Проводит ИИ-кастдев (с UTM-разметкой каналов трафика).</li>
+              <li>И объясняет ваш метод как консультант-диагност, донося его ценность человеку через его личные задачи и ограничения.</li>
+            </ul>
+
+            <p><strong>В результате:</strong> вы знаете дословно, чего хотят люди, а они видят, как конкретно их проблемы решаются вашим продуктом.</p>
+            <p><strong>Ничего другого больше не нужно.</strong></p>
+          </div>
           <div class="hero__actions">
-            <a class="btn btn--primary" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Подписаться на канал</a>
-            <a class="btn btn--ghost" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Узнать детали</a>
-          </div>
-          <ul class="hero__metrics" role="list">
-            <li>
-              <span>+280%</span>
-              uplift на запуске AI-кампании в e-commerce
-            </li>
-            <li>
-              <span>37</span>
-              спринтов по внедрению нейро-инструментов
-            </li>
-            <li>
-              <span>12</span>
-              продуктов с персонализированными сценариями
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section id="focus" class="section">
-      <div class="container section__inner">
-        <header class="section__header">
-          <h2>Почему стоит подписаться</h2>
-          <p>Канал — быстрый вход в мои рабочие материалы. Вместо продажных постов ты получаешь инструкции, которые можно
-            сразу внедрить в продукт, команду и креатив.</p>
-        </header>
-        <div class="pillars">
-          <article class="glass-card">
-            <h3>Быстрый разогрев</h3>
-            <p>Первым делом я даю понятную карту действий: как считать сигналы, куда направлять бюджет, какие эксперименты
-              ставить. Это убирает хаос и экономит время.</p>
-          </article>
-          <article class="glass-card">
-            <h3>Готовые нейро-сценарии</h3>
-            <p>Делюсь промпт-картами, шаблонами контента и пайплайнами генерации. Берёшь готовое, подставляешь свой
-              продукт и запускаешь.</p>
-          </article>
-          <article class="glass-card">
-            <h3>Системы без воды</h3>
-            <p>Показываю реальные связки инструментов: от AI-ассистентов и автоворонок до персональных рекомендаций.
-              Видно, что работает и как это масштабировать.</p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="systems" class="section section--alt">
-      <div class="container section__inner">
-        <header class="section__header">
-          <h2>Что ты получишь в канале</h2>
-          <p>Структурированные подборки: коротко о теории, пошаговые инструкции и примеры внедрения. Всё, чтобы ты сразу
-            тестировал и видел рост.</p>
-        </header>
-        <div class="systems">
-          <article class="system">
-            <div class="system__tag">01</div>
-            <h3>Neuro Canvas</h3>
-            <p>Фреймворк для позиционирования и продуктовой логики. Делюсь шаблонами, чтобы ты мог быстро собрать свою
-              карту возможностей.</p>
-            <ul>
-              <li>Шаблоны сбора сигналов из сообщества</li>
-              <li>Нейро-аналитика аудитории</li>
-              <li>Переупаковка ценностного предложения</li>
-            </ul>
-          </article>
-          <article class="system">
-            <div class="system__tag">02</div>
-            <h3>Signal Engine</h3>
-            <p>Система сигналов для запуска кампаний: мониторинг, исследования и генерация контента, собранные в одном
-              наборе инструкций.</p>
-            <ul>
-              <li>AI-ассистенты для сбора инсайтов</li>
-              <li>Динамические контент-паттерны</li>
-              <li>Мультканальные сценарии nurturing</li>
-            </ul>
-          </article>
-          <article class="system">
-            <div class="system__tag">03</div>
-            <h3>Growth Studio</h3>
-            <p>Формат для командных экспериментов: процессы, роль AI и чек-листы внедрения. Берёшь под ключ и повторяешь
-              у себя.</p>
-            <ul>
-              <li>Дашборды принятия решений</li>
-              <li>Автоматизированные спринты</li>
-              <li>Обучение команды и документация</li>
-            </ul>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="signals" class="section">
-      <div class="container section__inner">
-        <header class="section__header">
-          <h2>Кейсы и сигналы из канала</h2>
-          <p>Я показываю, как AI-стек влияет на продукт и продажи. Это реальные кейсы, которые можно повторить.</p>
-        </header>
-        <div class="signals">
-          <article class="signal">
-            <h3>AI-консьерж для EdTech</h3>
-            <p>Автоматизировала 70% общения с лидами, сократила цикл сделки на 3 дня и удержала NPS на уровне 9/10.</p>
-          </article>
-          <article class="signal">
-            <h3>Генеративный контент-хаб</h3>
-            <p>Построила пайплайн с Midjourney и собственными LoRA. Поддерживаем 24 вариации креатива без выгорания
-              команды.</p>
-          </article>
-          <article class="signal">
-            <h3>Data-driven бренд в финтехе</h3>
-            <p>Объединила продуктовые данные и маркетинг. Научились предсказывать конверсию и перераспределять бюджет в
-              течение суток.</p>
-          </article>
-          <article class="signal">
-            <h3>AI для офлайн-ивентов</h3>
-            <p>Настроила мультимодальную систему рекомендаций. Рост повторных продаж на 46% за сезон.</p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact" class="section section--alt contact">
-      <div class="container contact__inner">
-        <div class="contact__intro">
-          <h2>Забирай инструкции и кейсы в Telegram</h2>
-          <p>Подписывайся, чтобы получать свежие разборы, чек-листы и промпты. Без форм и ожидания ответа — вся полезная
-            информация уже в канале.</p>
-          <div class="contact__links">
-            <a class="btn btn--primary" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Перейти в
-              канал</a>
-            <a class="btn btn--ghost" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Узнать
-              подробнее</a>
+            <a class="btn btn--primary" href="https://t.me/egor_bulygin" target="_blank" rel="noreferrer">Перейти в канал</a>
           </div>
         </div>
       </div>
     </section>
+
   </main>
+
 
   <footer class="site-footer">
     <div class="container site-footer__inner">
